# mmos-pdf_on_submit

./: .editorconfig  .pre-commit-config.yaml  MANIFEST.in  README.md  app.json  hooks.py  pyproject.toml
.github/workflows/: codeql.yml
pdf_on_submit/: attach_pdf.py  hooks.py  quill.py  serial_numbers.py
pdf_on_submit/config/: docs.py
pdf_on_submit/locale/: de.po  main.pot
pdf_on_submit/pdf_on_submit/doctype/enabled_doctype/: enabled_doctype.json  enabled_doctype.py
pdf_on_submit/pdf_on_submit/doctype/pdf_on_submit_settings/: pdf_on_submit_settings.js  pdf_on_submit_settings.json  pdf_on_submit_settings.py
pdf_on_submit/tests/: test_pdf_on_submit.py
