[project]
name = "pdf_on_submit"
authors = [
    { name = "ALYF GmbH", email = "hallo@alyf.de"}
]
description = "Create a PDF on submit of a doctype"
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "beautifulsoup4~=4.12.2"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/alyf-de/erpnext_pdf-on-submit"
Repository = "https://github.com/alyf-de/erpnext_pdf-on-submit.git"
"Bug Reports" = "https://github.com/alyf-de/erpnext_pdf-on-submit/issues/new"
